// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteSkeleton renders wrapper and grid without children 1`] = `
<div>
  <div
    class="h-20 bg-card-bg animate-pulse"
  />
  <main
    aria-busy="true"
    class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6 md:pt-8 pb-[calc(env(safe-area-inset-bottom)+72px)]"
  >
    <div
      class="animate-pulse space-y-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"
      >
        <div
          aria-label="Loading table"
          class="rounded-2xl bg-card-bg animate-pulse h-10"
        />
      </div>
    </div>
  </main>
  <div
    class="h-20 bg-card-bg animate-pulse"
  />
</div>
`;

exports[`RouteSkeleton renders wrapper, children, and grid 1`] = `
<div>
  <div
    class="h-20 bg-card-bg animate-pulse"
  />
  <main
    aria-busy="true"
    class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6 md:pt-8 pb-[calc(env(safe-area-inset-bottom)+72px)]"
  >
    <div
      class="animate-pulse space-y-6"
    >
      <div
        class="placeholder"
      />
      <div
        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"
      >
        <div
          aria-label="Loading table"
          class="rounded-2xl bg-card-bg animate-pulse h-10"
        />
      </div>
    </div>
  </main>
  <div
    class="h-20 bg-card-bg animate-pulse"
  />
</div>
`;
